--- a/PP/appendix/appendix.tex
+++ b/PP/appendix/appendix.tex
@@ -2,10 +2,18 @@
 
 \section{Appendix} 
 
-\subsection{Hours of work}
-This is the time spent redacting the PP
+\subsection {Used tools}
+Tools used to create the PPD:
 \begin{itemize}
-	\item {Lorenzo Binosi} -   30 hours
+	\item \textbf{MikTex} \\ Distribution of the typesetting system LaTeX. \\ \url{http://miktex.org/} 
+	\item \textbf{GanttProject}\\ Free project scheduling and management application. \\ \url{http://www.ganttproject.biz/} 
+	\item \textbf{GitHub desktop}\\ Desktop application of the web-based Git repository hosting service. Used to collaborate in the team and to have a track of the changes.  \\ \url{https://desktop.github.com/} 
+\end{itemize}
+
+\subsection{Hours of work}
+This is the time spent redacting the PPD:
+\begin{itemize}
+	\item {Lorenzo Binosi} - 30 hours
 \end{itemize}
 
 \begin{thebibliography}{1}	
