--- a/PP/introduction/introduction.tex
+++ b/PP/introduction/introduction.tex
@@ -3,7 +3,7 @@
 \subsection{Revision History}
 
 Version of this document: 1.0 \\
-Last update: x
+Last update: 22/01/2017
 
 \subsection{Purpose}
 
@@ -17,7 +17,27 @@ PowerEnJoy is a digital management system for a car-sharing service that exclusi
 
 \subsection{Definitions, acronyms, and abbreviations}
 
-
+\begin{description}
+	\item[PPD:] Project Plan Document.
+	\item[ITPD:] Integration Test Plan Document.
+	\item[DD:] Design Document.
+	\item[RASD:] Requirements Analysis and Specification Document.
+	\item[System:] the whole software system to be developed, comprehensive of all its parts.
+	\item[FSM:] Functional Size Measurement.
+	\item[FP:] Function Point.
+	\item[UFP:] Unadjusted Function Point.	
+	\item[RET:] Record Element.	
+	\item[DET:] Data Element.
+	\item[ILF:] Internal Logic File.
+	\item[EIF:] External Interface File.
+	\item[EI:] External Input.
+	\item[EQ:] External Inquiry.
+	\item[EO:] External Output.
+	\item[SLOC:] Source Line Of Code.
+	\item[REST:] REpresentational State Transfer. It's an architectural style and an approach to stateless communications, used in the development of client-server systems.
+	\item[GUI:] Graphical User Interface.
+	\item[API:] Application Programming Interface.
+\end{description}
 
 \subsection{Reference Documents}
 
