--- a/PP/risks/risks.tex
+++ b/PP/risks/risks.tex
@@ -1,22 +1,22 @@
 \section{Risk management}
 
-The PowerEnJoy project could face several risks during and after its development, thus it's important to consider them in order to avoid any resources wasting. These risks can be divided into 3 main groups: project risks, technical risks and economical risks.
+The PowerEnJoy project could face several risks during and after its development, so it's important to consider them in order to avoid any waste of resources. These risks can be divided into 3 main groups: project risks, technical risks and economical risks.
 
 \subsection {Project risks}
 
 \begin{description}
 	\item [Lack of experience: ] the team is developing its first project. This will probably slow down the development of the project.
-	\item [Misunderstanding of the assignment: ] the final product could be different from the one intended by the customer (in our case, by the professor). In order to avoid this risk, it's important to keep a good communication between the two parties, clarifying all those aspects not completely clear.
+	\item [Misunderstanding of the assignment: ] the final product could be different from the one intended by the customer (in our case, by the professor). In order to avoid this risk, it's important to keep a good communication between the two parties, clarifying all of those aspects which are not completely clear.
 	\item [Delays over the expected deadlines: ] for some reasons, the project could require more time than expected. If that happens, we should provide, within the final deadlines, a release which contains at least the core functionalites. All the missing functionalities will be developed later on.
-	\item [Requirements incompleteness: ] requirements could be not completely defined. This could generate issues or errors later on, forcing the team to review aspects and slowing down the development of the project.
+	\item [Requirements incompleteness: ] requirements could be not completely defined. This could generate issues or errors later on, forcing the team to review certain aspects and slowing down the development of the project.
 \end{description}
 
 \subsection {Technical risks}
 
 \begin{description}
-	\item [Components infeasibility: ] components could be infeasible. In our case, the component which we should worry about is the car. It is equipped with a computer and many devices, thus it couldn't be possible to provide enough charge to the entire car system. If that happens, we should find another way to manage the car and considering that we are close to the deployment phase, it could cost a lot of resources.
-	\item [Scalability issues: ] the system has been thought to be scalable, but we could not be able to obtain the necessary hardware because of economical reasons. We can understand if there's the possibility to face this risk through a good statistical analysis.
-	\item [External components issues:] our system performs some tasks through external services (payments handling, sms dispatching). Changes in term and conditions on these services could pose serious financial or technical problems. In the worst case, we should change service and interface the new one with our system.
+	\item [Components infeasibility: ] components could be infeasible. In our case, the component which we should worry about the most is the car. It is equipped with a computer and many devices, so it couldn't be possible to provide enough charge to the entire car system. If that happens, we should find another way to manage the car and, considering that we are close to the deployment phase, it could cost a lot of resources.
+	\item [Scalability issues: ] the system has been thought to be scalable, but we could not be able to obtain the necessary hardware because of economical reasons. We can avoid this through a good statistical analysis.
+	\item [External components issues:] our system performs some tasks through external services (payments handling, sms dispatching). Changes in term and conditions on these services could pose serious financial or technical problems. In the worst case, we would have to change service and interface the new one with our system.
 	\item [Data loss:] data can be lost because of hardware failures or misconfigured software. This risk can be prevented implementing an automated backup system.
 \end{description}
 
@@ -24,9 +24,9 @@ The PowerEnJoy project could face several risks during and after its development
 \subsection {Economical risks}
 
 \begin{description}
-	\item [Technology innovation:] if we would have strong competitors in the current market, we could be forced to adapt the new techologies to our system in order to preserve our state in it.
+	\item [Technology innovation:] due to a strong market competition, we could be forced to conform our system to new technologies in order to preserve our position on the market.
 	\item [Regulation change:] local and state regulators could change at any time. In the worst case, our service could become infeasible according to the procedures and time limits laid down by law. This risk can be partially avoided by a good feasibility study.
-	\item [Bankruptcy:] the costs for the development, deployment and maintenance could be higher than expected. If they would be also higher than the income from the sales of the software, we could end in bankrupt. This risk can be avoided by a good project estimation.
+	\item [Bankruptcy:] the costs for the development, deployment and maintenance could be higher than expected. They could be also higher than the introit of software sales, so we could end in bankruptcy. This risk can be avoided by a good project estimation.
 	\item [Insurance laws:] changes in insurance laws could make the insurance premiums cost-prohibitive for our system to continue covering them. This risk can't be prevented at all.
-	\item [Tax laws:] changes in tax laws could make our service no longer attractive for consumers and businesses to choose car-sharing over car leasing or car ownership. This risk can't be prevented at all.
+	\item [Tax laws:] changes in tax laws could render our service to customers and businesses no longer more attractive than other solutions, as car leasing or car ownership. This risk can't be prevented at all.
 \end{description}
