--- a/Inspection/Inspection.tex
+++ b/Inspection/Inspection.tex
@@ -1,15 +1,16 @@
 \include{preamble/settings}
 \include{preamble/commands}
 
-\title{
+\title
+{
 	\begin{figure}[h]
 		\centering
 		\includegraphics{images/polimi_logo}
 	\end{figure}
 	Politecnico di Milano, A.A. 2016/2017 
 	\newline\newline 
-	Software Engineering 2: PowerEnJoy 
-	\textbf{R}equirements \textbf{A}nalysis and \textbf{S}pecification \textbf{D}ocument}
+	Software Engineering 2: Code Inspection
+}
 \author{Binosi Lorenzo 876022}	
 	
 \begin{document}
@@ -18,12 +19,10 @@
 	\tableofcontents
 	\newpage
 	
-	\include{introduction/introduction}
+	\include{description/description}
 	
-	\include{overall_description/overall_description}
+	\include{inspection/inspection}
 	
-	\include{requirements/requirements}
-	
-	\include{appendix}
+	\include{appendix/appendix}
 	
 \end{document}
