changes on RASD

--- a/RASD/appendix/appendix.tex
+++ b/RASD/appendix/appendix.tex
@@ -1,6 +1,7 @@
+\appendix
 \section{Appendix}
 \subsection{Used tools}
-To create the RASD we used the following tools:
+Tools used to create the RASD:
 \begin{itemize}
 	\item \textbf{MikTex} \\ Distribution of the typesetting system LaTeX \\ \url{http://miktex.org/} 
 	\item \textbf{TexStudio}\\ OpenSource cross-platform LaTeX editor we used to write the RASD. \\ \url{http://texstudio.sourceforge.net/} 
@@ -10,6 +11,10 @@ To create the RASD we used the following tools:
 	\item \textbf{GitHub desktop}\\ Desktop application of the web-based Git repository hosting service. Used to collaborate in the team and to have a track of the changes.  \\ \url{https://desktop.github.com/} 
 \end{itemize}
 
+\subsection{Changelog}
+\begin{itemize}
+	\item 08/02/2017 - Changes on the car system, removed wrong assumptions, added new assumptions, fixed small typos.
+\end{itemize}
 
 \subsection{Hours of work}
 This is the time spent redacting the RASD
