--- a/RASD/requirements/requirements.tex
+++ b/RASD/requirements/requirements.tex
@@ -39,7 +39,7 @@ User interfaces must satisfy the following UI constraints:
 	\end{enumerate}
 	
 \subsubsection{Hardware interfaces}
-The embedded system of any cars must be provided of	
+The embedded system of each cars must be provided of	
 \begin{itemize}
 	\item a 7" touchscreen display
 	\item a GPS device
@@ -57,7 +57,8 @@ The required software products used by the back-end are:
 \end{itemize}
 The required software product used by the car application is:
 \begin{itemize}
-	\item Java Embedded\footnote{\url{http://www.oracle.com/technetwork/java/embedded/overview/index.html}}
+	\item Ubuntu 16.10\footnote{\url{http://www.ubuntu-it.org/}}
+	\item OpenSSH\footnote{\url{https://www.openssh.com/}}
 \end{itemize}
 The required operating systems for the mobile application are:
 \begin{itemize}
